# ubirch-mbed-air-quality-sensor

./: .gitignore  .mbedignore  CMakeLists.txt  Grove_Air_Quality_Sensor_Library.lib  README.md  build.sh  config.h.template  goBuild.sh  main.cpp  mbed-os-quectelM66-driver.lib  mbed-os.lib  mbed_app.json  wolfSSL.lib
Grove_Air_Quality_Sensor_Library/: Air_Quality.cpp  Air_Quality.h
dbgutil/: dbgutil.c  dbgutil.h
src/: main.cpp  response.c  sensor.h
